# Kanban_Project

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  db.py  main.py
backend/static/: index.html
backend/tests/: test_ai.py  test_auth.py  test_board.py  test_static.py
docs/: AI.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts  vitest.config.ts
frontend/src/app/: layout.tsx
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.test.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.test.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.test.ts
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
